--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Dilay's Portfolio</title>
-  </head>
-  <body>
-    <h1>Welcome to my portfolio!</h1>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>External Script Example</title>
+</head>
+<body>
+  <h1>Hello!</h1>
+
+  <!-- This links to your external JS file -->
+  <script src="alert.js"></script>
+</body>
 </html>
